# tlsr8266_mesh

./: .gitignore  LICENSE  Makefile  README.md
app/android/TelinkMesh/: QRCodeData.json  QRCodeDataMapping.properties  gradle.properties  local.properties  readme.txt  settings.gradle
docs/: README.md  adoption.md  ble.md  firmware.md  pairing.md  swire.md  uart.md  uart_api.md
picow_swire/: client.py  main.py  remote.py
rust/: Cargo.toml  copilot_context.txt  run_tests.sh  rust-toolchain.toml
rust/.cargo/: config
rust/src/: app.rs  common.rs  config.rs  easer.rs  lib.rs  light_manager.rs  main_light.rs  math_wrapper.rs  mesh.rs  ota.rs  state.rs  uart_manager.rs  vendor_light.rs  version.rs
rust/src/embassy/: executor.rs  mod.rs  sync.rs  time_driver.rs  yield_now.rs
rust/src/embassy/sync/: mod.rs  mutex.rs  poison.rs
rust/src/sdk/: app_att_light.rs  factory_reset.rs  light.rs  mod.rs  packet_types.rs  pm.rs  rf_drv.rs  service.rs
rust/src/sdk/ble_app/: ble_ll_att.rs  ble_ll_attribute.rs  ble_ll_channel_selection.rs  ble_ll_pair.rs  light_ll.rs  ll_irq.rs  mod.rs  rf_drv_8266.rs  rf_drv_8266_tables.rs  shared_mem.rs
rust/src/sdk/common/: bit.rs  compat.rs  crc.rs  macros.rs  mod.rs  string.rs
rust/src/sdk/drivers/: flash.rs  mod.rs  pwm.rs  spi.rs  uart.rs
rust/src/sdk/mcu/: analog.rs  clock.rs  crypto.rs  dma.rs  gpio.rs  irq_i.rs  mod.rs  random.rs  register.rs  watchdog.rs
sdk/: .cstartup_8266.S.swp  boot.link  cstartup_8266.S  getver.sh  increment_version.sh  readme.git.txt  readme.txt  release_note_V1P_20200703.docx  tl_check_fw.sh  ven_release.bat  version.h  version.in
sdk/proj/: tl_common.h
sdk/proj/app/: usbaud.c  usbaud.h  usbaud_i.h  usbkb.c  usbkb.h  usbkb_i.h  usbmouse.c  usbmouse.h  usbmouse_i.h
sdk/proj/common/: array.h  assert.h  bit.h  breakpoint.c  breakpoint.h  compatibility.c  compatibility.h  hash.h  list.c  list.h  log.c  log.h  log_id.h  macro_trick.h  mempool.c  mempool.h  mmem.c  mmem.h  printf.c  printf.h  qsort.c  ringbuffer.h  selection_sort.c  selection_sort.h  static_assert.h  string.c  string.h  types.h  utility.c  utility.h  utlist.h
sdk/proj/config/: user_config.h
sdk/proj/drivers/: adc.h  adc_8258.c  adc_8258.h  adc_8278.c  adc_8278.h  airmouse.c  airmouse.h  airmouse_cali.c  (+49 more)
sdk/proj_lib/: airmouse.h  bqb_bsp.h  bqb_pm.h  bqb_rf.h  pm.h  pm_8258.h  pm_8263.h  pm_8266.h  pm_8267.h  pm_8269.h  pm_8278.h  pm_8366.h  pm_8368.h  rf_drv.h  rf_drv_8258.h  rf_drv_8263.h  rf_drv_8266.h  rf_drv_8267.h  rf_drv_8269.h  rf_drv_8278.h  rf_drv_8366.h  rf_drv_8368.h
src/: common.h  main.c  main_light.c  vendor_att_light.c  vendor_light.c
toolchain/: fix_asm.py  fix_c.py  fix_c.py.rc.c  fix_ir.py  fix_ramcode.py  rust2c.sh
utilities/meshutils/: flash_fw.py  flash_fw_uart.py  mesh_add.py  mesh_common.py  requirements.in  requirements.txt
utilities/picow_swire/: client.py  requirements.in  requirements.txt
(+327 files in other folders)
