[package]
name = "tlsr8266_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = false
panic = "abort"

[dependencies]
paste = "1.0"
embassy-time = { version = "0.1", features = ["tick-hz-32_000_000"] }
embassy-executor = { version = "0.2", features = ["nightly", "integrated-timers", "pender-callback"] }
heapless = "0.7"
critical-section = { version = "1.1", features = ["restore-state-u8"]}
fixed = "1.27"
const_format = "0.2"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
bytemuck = "1.15"

[dev-dependencies]
mry = "0.2.6"

[features]
# If enabled, use a 16MHz crystal.
# USE WITH CAUTION. Flashing a 12MHz (default) build on to a 16MHz board, or vice versa WILL BRICK THE CHIP unless you
# can use SWS to reprogram the chip.
#xtal-16mhz = []